[project]
name = "exif-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "streamlit>=1.45.1",
    "tk>=0.1.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = ["black>=25.1.0", "flake8>=7.2.0", "mypy>=1.16.1", "pytest>=8.4.0"]
